# ghost

./: CMakeLists.txt  README.md  qtighost.cpp  qtighost.hpp
